@@ -1,12 +1,10 @@
 /*
- * Copyright (c) 1998, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -22,5 +20,28 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-void exitTransportWithError(char *msg, char *fileName,
-                            char *date, int lineNumber);
+
+/**
+ * @test
+ * @bug 8288120
+ * @summary Verify an appropriate accessor method is looked up.
+ * @compile --enable-preview -source ${jdk.version} ProxyMethodLookup.java
+ * @run main/othervm --enable-preview ProxyMethodLookup
+ */
+public class ProxyMethodLookup {
+
+    public static void main(String[] args) {
+        Object val = new R(new Component());
+        boolean b = val instanceof R(var c);
+   }
+
+    interface ComponentBase {}
+
+    record Component() implements ComponentBase {}
+
+    sealed interface Base {
+        ComponentBase c();
+    }
+
+    record R(Component c) implements Base {}
+}
